[package]
name = "quasr"
version = "0.1.0"
authors = ["jlricon <artirj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0.48"
# chrono = { version = "0.4", features = ["serde"] }
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["json","diesel_mysql_pool"],default-features = false }
diesel = {version="1.4", features=['mysql','chrono']}
quasr_io = { path = "src/quasr_io" }
quasr_core={path="src/quasr_core"}
serde_json="*"
dotenv="*"
[toolchain]
channel = "nightly"