[package]
name = "quasr_core"
version = "0.1.0"
authors = ["Jose Luis Ricon <artirj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }

[dev-dependencies]
pretty_assertions="*"
[toolchain]
channel = "nightly"