[package]
name = "quasr_io"
version = "0.1.0"
authors = ["Jose Luis Ricon <artirj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1.3"
diesel = { version = "1.4.3", features = ['mysql','chrono'] }
simple-error = "0.2.1"
quasr_core={path="../quasr_core"}